package clase1.MesasDeTrabajo.MesasDeTrabajo2;

public class LiquidadorEfectivo extends Liquidador {
    @Override
    public double calcularSueldo(Empleado empleado) {
        return 0;
    }

    @Override
    public String imprimir(Empleado empleado) {
        return null;
    }
}
