@startuml
'https://plantuml.com/class-diagram

abstract class Empleado
{
-nombre:String
-apellido: String
-nroCuenta: String
}

class EmpleadoEfectivo
{
-sueldoBasico:double
-descuentos: double
-premios: premios
}

class EmpleadoContratado
{
-cantHoras:int
-tarifaPorHora:double
}

EmpleadoEfectivo --|> Empleado
EmpleadoContratado --|> Empleado

abstract class Liquidador
{
+liquidarSueldo(Empleado): String
+{abstract}calcularMonto(Empleado): double
+{abstract}imprimir(Empleado):double
+depositar(Empleado):void
}

class LiquidadorEfectivo{
+calcularMonto(Empleado):double
+imprimir(Empleado):double
}

class LiquidadorContratado{
+calcularMonto(Empleado):double
+imprimir(Empleado):double
}
LiquidadorEfectivo --|> Liquidador
LiquidadorContratado --|> Liquidador
Empleado -l-|> Liquidador
@enduml